{web} Fix "Load Example" icon on Safari (#189)
Fixes #179

--- a/modes/web/gactar-web/src/app.scss
+++ b/modes/web/gactar-web/src/app.scss
@@ -53,6 +53,10 @@ textarea#results {
   margin-right: 0.5em;
 }
 
+.icon-space-left {
+  margin-left: 0.5em;
+}
+
 .buttons {
   margin-bottom: 0 !important;
   padding-left: 0.5rem;
